<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Form">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/first_name"
            android:textColor="#000"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="116dp"
            android:layout_marginLeft="116dp"
            android:layout_weight=".25"
            android:text="@string/last_name"
            android:textColor="#000"
            android:textSize="16sp" />
    </LinearLayout>
    <Space
        android:layout_width="1dp"
        android:layout_height="12dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/firstName"
            android:layout_width="190dp"
            android:layout_height="30dp"
            android:layout_weight="0.75"
            android:background="@drawable/custom_input"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:hint="@string/first_name"
            android:textColor="#b0b0b0"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="190dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.75"
            android:background="@drawable/custom_input"
            android:padding="5dp"
            android:hint="@string/last_name"
            android:textColor="#b0b0b0"
            android:textSize="16sp" />
    </LinearLayout>
    <Space
        android:layout_width="1dp"
        android:layout_height="5dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        >

        <TextView
            android:id="@+id/gender"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="#000"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            />
        <RadioGroup
            android:id="@+id/radioBtnGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textSize="16sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight=".25"
            android:text="@string/birthday"
            android:textColor="#000"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/birthday"
                android:layout_width="300dp"
                android:layout_height="37dp"
                android:layout_weight="0.75"
                android:background="@drawable/custom_input"
                android:padding="5dp"
                android:hint="@string/birthday"
                android:textColor="#b0b0b0"
                android:textSize="16sp" />

            <Button
                android:id="@+id/editDate"
                android:layout_width="76dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:background="#d6d6d6"
                android:text="@string/select"
                android:onClick="setDate"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
    <Space
        android:layout_width="1dp"
        android:layout_height="5dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/address"
            android:textColor="#000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/address"
            android:layout_width="388dp"
            android:layout_height="60dp"
            android:layout_weight="0.75"
            android:background="@drawable/custom_input"
            android:gravity="start"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="3dp"
            android:hint="@string/address"
            android:textColor="#b0b0b0"
            android:textSize="16sp" />
    </LinearLayout>

    <Space
        android:layout_width="1dp"
        android:layout_height="5dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/email"
            android:textColor="#000"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="388dp"
            android:layout_height="30dp"
            android:layout_weight="0.75"
            android:background="@drawable/custom_input"
            android:gravity="start"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="3dp"
            android:hint="@string/email"
            android:textColor="#b0b0b0"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
    <Space
        android:layout_width="1dp"
        android:layout_height="5dp"/>
    <CheckBox
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/term"
        android:textSize="16sp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="30dp"
        android:background="#d6d6d6"
        android:layout_gravity="center"
        android:text="@string/register"
        android:textSize="16sp" />
    <Space
        android:layout_width="1dp"
        android:layout_height="10dp"/>
    <TextView
        android:id="@+id/value"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="#800000"
        android:textSize="16sp"/>


</LinearLayout>