<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6"
    tools:context=".Calculator">

    <TextView
        android:id="@+id/text_result"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center|end"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:textColor="#000"
        android:textSize="50sp"
        android:fontFamily="@font/digital"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4"
        tools:ignore="Suspicious0dp">

        <Button
            android:id="@+id/btn_ce"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/ce"
            android:textSize="30sp"
            android:background="#dedede"
            tools:ignore="NestedWeights"
            android:fontFamily="@font/digital"/>

        <Button
            android:id="@+id/btn_c"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/c"
            android:layout_margin="4dp"
            android:textSize="30sp"
            android:background="#dedede"
            tools:ignore="NestedWeights"
            android:fontFamily="@font/digital"/>

        <Button
            android:id="@+id/btn_bs"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/bs"
            android:layout_margin="4dp"
            android:textSize="30sp"
            android:background="#dedede"
            tools:ignore="NestedWeights"
            android:fontFamily="@font/digital"/>

        <Button
            android:id="@+id/btn_div"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="/"
            android:layout_margin="4dp"
            android:textSize="30sp"
            android:background="#dedede"
            tools:ignore="NestedWeights"
            android:fontFamily="@font/digital"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4"
        tools:ignore="Suspicious0dp">

        <Button
            android:id="@+id/btn_7"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="7"
            android:layout_margin="4dp"
            android:textSize="30sp"
            android:background="#efefef"
            tools:ignore="NestedWeights"
            android:fontFamily="@font/digital"/>

        <Button
            android:id="@+id/btn_8"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="8"
            android:layout_margin="4dp"
            android:textSize="30sp"
            android:background="#efefef"
            tools:ignore="NestedWeights"
            android:fontFamily="@font/digital"/>

        <Button
            android:id="@+id/btn_9"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="9"
            android:layout_margin="4dp"
            android:textSize="30sp"
            android:background="#efefef"
            tools:ignore="NestedWeights"
            android:fontFamily="@font/digital"/>

        <Button
            android:id="@+id/btn_mul"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="x"
            android:layout_margin="4dp"
            android:textSize="20sp"
            android:background="#dedede"
            tools:ignore="NestedWeights"
            android:fontFamily="@font/digital"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4"
        tools:ignore="Suspicious0dp">

        <Button
            android:id="@+id/btn_4"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="4"
            android:layout_margin="4dp"
            android:textSize="30sp"
            android:background="#efefef"
            tools:ignore="NestedWeights"
            android:fontFamily="@font/digital"/>

        <Button
            android:id="@+id/btn_5"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="5"
            android:layout_margin="4dp"
            android:textSize="30sp"
            android:background="#efefef"
            tools:ignore="NestedWeights"
            android:fontFamily="@font/digital"/>

        <Button
            android:id="@+id/btn_6"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="6"
            android:layout_margin="4dp"
            android:textSize="30sp"
            android:background="#efefef"
            tools:ignore="NestedWeights"
            android:fontFamily="@font/digital"/>

        <Button
            android:id="@+id/btn_sub"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="-"
            android:layout_margin="4dp"
            android:textSize="30sp"
            android:background="#dedede"
            tools:ignore="NestedWeights"
            android:fontFamily="@font/digital"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4"
        android:background="#efefef"
        tools:ignore="Suspicious0dp">

        <Button
            android:id="@+id/btn_1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="1"
            android:layout_margin="4dp"
            android:textSize="30sp"
            android:background="#efefef"
            tools:ignore="NestedWeights"
            android:fontFamily="@font/digital"/>

        <Button
            android:id="@+id/btn_2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="2"
            android:layout_margin="4dp"
            android:textSize="30sp"
            android:background="#efefef"
            tools:ignore="NestedWeights"
            android:fontFamily="@font/digital"/>

        <Button
            android:id="@+id/btn_3"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="3"
            android:layout_margin="4dp"
            android:textSize="30sp"
            android:background="#efefef"
            tools:ignore="NestedWeights"
            android:fontFamily="@font/digital"/>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="+"
            android:layout_margin="4dp"
            android:textSize="30sp"
            android:background="#dedede"
            tools:ignore="NestedWeights"
            android:fontFamily="@font/digital"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4"
        tools:ignore="Suspicious0dp">

        <Button
            android:id="@+id/btn_rev"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="+/-"
            android:layout_margin="4dp"
            android:textSize="30sp"
            android:background="#dedede"
            tools:ignore="NestedWeights"
            android:fontFamily="@font/digital"/>

        <Button
            android:id="@+id/btn_0"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="0"
            android:layout_margin="4dp"
            android:textSize="30sp"
            android:background="#efefef"
            tools:ignore="NestedWeights"
            android:fontFamily="@font/digital"/>

        <Button
            android:id="@+id/btn_dot"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="."
            android:layout_margin="4dp"
            android:textSize="30sp"
            android:background="#dedede"
            tools:ignore="NestedWeights"
            android:fontFamily="@font/digital"/>

        <Button
            android:id="@+id/btn_equal"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="="
            android:layout_margin="4dp"
            android:textSize="30sp"
            android:background="#dedede"
            tools:ignore="NestedWeights"
            android:fontFamily="@font/digital"/>
    </LinearLayout>
</LinearLayout>
